// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`customCheckBox > render is checkend 1`] = `
<label
  className="_label_e66d37"
>
  <input
    checked={true}
    className="_input_e66d37"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="_psevdoInput_e66d37"
  >
    <Memo
      color="success"
    />
  </div>
</label>
`;

exports[`customCheckBox > render is not checkend 1`] = `
<label
  className="_label_e66d37"
>
  <input
    checked={false}
    className="_input_e66d37"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="_psevdoInput_e66d37"
  />
</label>
`;
